Prevent wrapping

--- a/wiki/src/donate.css
+++ b/wiki/src/donate.css
@@ -131,7 +131,7 @@ span.title {
 }
 
 #paypal-without-js form label {
-  font-size: 13px;
+  font-size: 12px;
   margin-left: 0.5em;
   margin-right: 0.5em;
 }
